--- a/test_site/styles/style.css
+++ b/test_site/styles/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px; 
-  font-family: "Open Sans", sans-serif; 
+  font-family: "Sans Serif", sans-serif; 
     font-size: 20px;
     text-align: center;
   }
@@ -14,19 +14,19 @@ html {
   
 
 html {
-  background-color: #69a0d5;
+  background-color: #c8e0f7;
 }
 body {
   width: 600px;
   margin: 0 auto;
-  background-color: #e2b1da;
+  background-color: #e2cddf;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
 h1 {
   margin: 0;
   padding: 20px 0;
-  color: #00539f;
+  color: #04335f;
   text-shadow: 1px 3px 1px black;
 }
 img {
